72 and 1143